admin handler with login via jwt
